@@ -483,3 +483,8 @@ text.options.options=Text Options
 stretch.video.label=Stretch Video
 export.schedule.songs.pdf.button=Export songs to PDF
 exporting.label=Exporting
+use.shadow.label=Use Shadow?
+shadow.color.label=Shadow Colour
+shadow.offset.label=Shadow Offset
+shadow.radius.label=Shadow Radius
+shadow.spread.label=Shadow Spread
